# AI-Fast-Server-Python-

./: .gitignore  COMMIT_HISTORY.md  PROJECT_ANALYSIS.md  README.md  api_middleware.py  api_server.py  app_settings.py  main.py  memory.json  pyproject.toml  safe_math.py  slack_notifier.py  windows_service.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  OPERATIONS.md  SECURITY_AND_DEPLOYMENT.md
integration/windows-service/: README.md
integration/wpf/: AgentApiServiceStarter.cs  AiAgentClient.cs  MainWindowChatExample.xaml.cs  README.md
scripts/: install_service_admin.cmd  post-commit.ps1  remove_service_admin.cmd  update_commit_history.ps1
tests/: conftest.py  test_chat.py  test_health.py  test_ready.py  test_safe_math.py
