[project]
name = "ai-agent-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings>=2.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.16",
    "langgraph>=1.1.9",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
windows-service = ["pywin32>=307"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

# 이 프로젝트는 실행 스크립트(main.py/api_server.py 등) 중심이며,
# 최상위 폴더(logs, integration 등)를 파이썬 패키지로 자동 탐색하면 editable 설치가 실패할 수 있습니다.
[tool.setuptools]
packages = []
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
